# Data-Science-Project

./: README.md  pyproject.toml
Diabetes-Prediction/: pyproject.toml
Diabetes-Prediction/src/data_science/validation/: DataValidator.py
Diabetes-Prediction/src/validation/notebooks/: basic_validations.ipynb  outliers.ipynb  relationships.ipynb
data-science/: pyproject.toml
diabetes_prediction/src/diabetes_prediction/validation/notebooks/: distribution.ipynb
notebooks/domain_knowledge/: domain_knowledge.ipynb
notebooks/validation/: basic_validations.ipynb  distribution.ipynb  outliers.ipynb  relationships.ipynb
src/: validation.py
src/diabetes_prediction/validation/: validation.py
src/notebooks/validation/: basic_validations.ipynb
