[project]
name = "diabetes_prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "engseif",email = "eng.seifmohamed2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "great-expectations (>=1.15.1,<2.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "diabetes_prediction", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
