[project]
name = "data-science"
version = "0.1.0"
description = ""
authors = [
    {name = "engseif",email = "eng.seifmohamed2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "great-expectations (>=1.15.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "data_science", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
